complete online qcv design

--- a/src/main.css
+++ b/src/main.css
@@ -113,3 +113,10 @@ body,
 .muirtl-1jy569b-MuiFormLabel-root-MuiInputLabel-root {
   font-family: IRANSansX !important;
 }
+
+.disable-text-selection{
+   -moz-user-select:none; /* firefox */
+   -webkit-user-select: none; /* Safari */
+   -ms-user-select: none; /* IE*/
+   user-select: none; /* Standard syntax */
+}
